--- a/Style.css
+++ b/Style.css
@@ -1,6 +1,7 @@
 :root {
  /* used for variables for CSS use only
     -----------------------------------
+
 */
 
 /*intro screen pos */
@@ -73,6 +74,7 @@ h1 {
    animation: blinker 3s infinite;
    animation-timing-function: linear;
 }
+/* start buttons colour animations*/
 @keyframes blinker {
       5% {
          color:white;
